fix overflowx

--- a/Js-Buoi-7/mystyle.css
+++ b/Js-Buoi-7/mystyle.css
@@ -258,6 +258,7 @@ h1 {
 body {
   min-height: 100vh;
   background: linear-gradient(90deg, #FDBB2D 0%, #22C1C3 100%);
+  overflow-x: hidden;
 }
 /* scroll bar */
 #style-1::-webkit-scrollbar-track
